--- a/nginx.conf
+++ b/nginx.conf
@@ -1,123 +1,124 @@
-# WebSocket upgrade (untuk backend WebSocket + Grafana Live Tailing)
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
+# Full nginx.conf - bisa dipakai sebagai /etc/nginx/nginx.conf
+# Test: sudo nginx -t  lalu reload: sudo systemctl reload nginx
+
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+error_log /var/log/nginx/error.log;
+
+events {
+    worker_connections 1024;
 }
 
-# =========================
-# UPSTREAM BACKEND (GO API)
-# =========================
-upstream backend_api {
-    server localhost:5001;
-    keepalive 64;
-}
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
-# =========================
-# UPSTREAM GRAFANA (MONITORING) - opsional
-# =========================
-upstream grafana {
-    server localhost:3001;
-    keepalive 32;
-}
-
-# =========================
-# HTTP → HTTPS
-# =========================
-server {
-    listen 80;
-    server_name protect.zacloth.com;
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# =========================
-# HTTPS SERVER (BE ONLY)
-# =========================
-server {
-    listen 443 ssl;
-    http2 on;
-    server_name protect.zacloth.com;
-
-    # SSL (Let's Encrypt) - ganti path sesuai domain
-    ssl_certificate /etc/letsencrypt/live/protect.zacloth.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/protect.zacloth.com/privkey.pem;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    # Upload limit
-    client_max_body_size 50M;
-
-    # =========================
-    # WEBSOCKET (/ws → backend /api/v1/ws)
-    # =========================
-    location /ws {
-        proxy_pass http://backend_api/api/v1/ws;
-        proxy_http_version 1.1;
-
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_read_timeout 86400;
-        proxy_send_timeout 86400;
-        proxy_buffering off;
+    # WebSocket upgrade (backend WebSocket + optional Grafana)
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
     }
 
     # =========================
-    # API ROUTES
+    # UPSTREAM BACKEND (GO API)
     # =========================
-    location /api/ {
-        proxy_pass http://backend_api;
-        proxy_http_version 1.1;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # CORS headers are handled by backend - do not add here to avoid duplicates
+    upstream backend_api {
+        server localhost:5001;
+        keepalive 64;
     }
 
     # =========================
-    # HEALTH CHECK
+    # UPSTREAM GRAFANA (opsional, comment jika tidak pakai)
     # =========================
-    location /health {
-        proxy_pass http://backend_api;
-        access_log off;
+    upstream grafana {
+        server localhost:3001;
+        keepalive 32;
     }
 
     # =========================
-    # GRAFANA (MONITORING) - opsional
-    # https://protect.zacloth.com/grafana
-    # Live tailing butuh WebSocket (Upgrade + Connection)
+    # HTTP → HTTPS
     # =========================
-    location /grafana/ {
-        proxy_pass http://grafana/grafana/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        proxy_read_timeout 86400;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 86400;
-        proxy_buffering off;
+    server {
+        listen 80;
+        server_name protect.zacloth.com;
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
     # =========================
-    # BLOCK ROOT (NO FRONTEND)
+    # HTTPS SERVER (BE ONLY)
     # =========================
-    location / {
-        return 404;
+    server {
+        listen 443 ssl;
+        http2 on;
+        server_name protect.zacloth.com;
+
+        # SSL (Let's Encrypt)
+        ssl_certificate /etc/letsencrypt/live/protect.zacloth.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/protect.zacloth.com/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+
+        client_max_body_size 50M;
+
+        # WEBSOCKET (/ws → backend /api/v1/ws)
+        location /ws {
+            proxy_pass http://backend_api/api/v1/ws;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 86400;
+            proxy_send_timeout 86400;
+            proxy_buffering off;
+        }
+
+        # API ROUTES
+        location /api/ {
+            proxy_pass http://backend_api;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # HEALTH CHECK
+        location /health {
+            proxy_pass http://backend_api;
+            access_log off;
+        }
+
+        # GRAFANA (opsional - comment block ini jika tidak pakai Grafana)
+        location /grafana/ {
+            proxy_pass http://grafana/grafana/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+            proxy_read_timeout 86400;
+            proxy_connect_timeout 300;
+            proxy_send_timeout 86400;
+            proxy_buffering off;
+        }
+
+        location / {
+            return 404;
+        }
     }
 }
