--- a/protek.conf
+++ b/protek.conf
@@ -1,14 +1,5 @@
-# ============================================================
-# UNTUK: /etc/nginx/sites-enabled/protek.conf
-# ============================================================
-# Copy isi file INI ke: sudo nano /etc/nginx/sites-enabled/protek.conf
-#
-# JANGAN taruh user, worker_processes, events, http {} di sini.
-# File ini di-include dari main nginx.conf di dalam blok http {},
-# jadi hanya boleh berisi: map, upstream, server {}
-# ============================================================
+# Hanya isi untuk http {} - JANGAN ada baris: user, worker_processes, events, http
 
-# WebSocket upgrade
 map $http_upgrade $connection_upgrade {
     default upgrade;
     ''      close;
@@ -19,7 +10,6 @@ upstream backend_api {
     keepalive 64;
 }
 
-# HTTP → redirect ke HTTPS (setelah certbot, uncomment blok server 443 di bawah)
 server {
     listen 80;
     server_name protect.zacloth.com;
@@ -61,51 +51,3 @@ server {
         access_log off;
     }
 }
-
-# Setelah jalankan: sudo certbot --nginx -d protect.zacloth.com
-# certbot akan otomatis tambah listen 443 ssl dan isi ssl_certificate.
-# Atau uncomment blok di bawah lalu sesuaikan path SSL.
-#
-# server {
-#     listen 443 ssl;
-#     http2 on;
-#     server_name protect.zacloth.com;
-#     ssl_certificate /etc/letsencrypt/live/protect.zacloth.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/protect.zacloth.com/privkey.pem;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     client_max_body_size 50M;
-#
-#     location / {
-#         proxy_pass http://backend_api;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-#     location /ws {
-#         proxy_pass http://backend_api/api/v1/ws;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection "upgrade";
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_read_timeout 86400;
-#         proxy_send_timeout 86400;
-#         proxy_buffering off;
-#     }
-#     location /api/ {
-#         proxy_pass http://backend_api;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-#     location /health {
-#         proxy_pass http://backend_api;
-#         access_log off;
-#     }
-# }
