--- a/protek.conf
+++ b/protek.conf
@@ -5,7 +5,7 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
-upstream backend_api {
+upstream protek_backend {
     server 127.0.0.1:5001;
     keepalive 64;
 }
@@ -15,7 +15,7 @@ server {
     server_name protect.zacloth.com;
 
     location / {
-        proxy_pass http://backend_api;
+        proxy_pass http://protek_backend;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -24,7 +24,7 @@ server {
     }
 
     location /ws {
-        proxy_pass http://backend_api/api/v1/ws;
+        proxy_pass http://protek_backend/api/v1/ws;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -38,7 +38,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend_api;
+        proxy_pass http://protek_backend;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -47,7 +47,7 @@ server {
     }
 
     location /health {
-        proxy_pass http://backend_api;
+        proxy_pass http://protek_backend;
         access_log off;
     }
 }
